# ics_render

./: .gitignore  LICENSE  README.md  make_screenshots  pyproject.toml
asset/screenshots/: html-grid-modal-demo.html  html-grid.html  html-list.html  html-table.html  jsonl-preview.html  sample-table.txt  sample.jsonl  table-preview.html
development/: build.sh  push.sh
src/ics_render/: __init__.py  events.py  html_calendar.py
src/ics_render/entrypoint/: __init__.py  ir_format.py
tests/: test_events.py  test_html_calendar.py
tests/entrypoint/: test_ics_render.py  test_ir_format.py
tests/fixtures/: early.ics  late.ics
