[project]
name = "ics_render"
version = "0.1.0"
description = "Parse ICS calendar files and print events in a sorted table"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "icalendar>=6.0.0",
    "tabulate>=0.9.0",
]

[project.scripts]
ics_render = "ics_render.entrypoint.ics_render:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ics_render"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
build = [
    "build>=1.0.0",
    "hatchling>=1.0.0",
    "twine>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
