[project]
name = "ics_render"
version = "0.1.1"
description = "Parse one or more ICS calendar files and output in different formats"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "icalendar>=6.0.0",
    "tabulate>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/dsoprea/ics_render"

[project.scripts]
ics_render = "ics_render.entrypoint.ics_render:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ics_render"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
build = [
    "build>=1.0.0",
    "hatchling>=1.0.0",
    "twine>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
